[package]
name = "gsim_py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "gsim_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.21.0"
gsim = { path = "../gsim" }
numpy = { version = "0.21.0", features = ["nalgebra"]}
nalgebra = "0.32.5"
num = "0.4.2"
